# grasp_pose_detection

./: .cproject  .project  CMakeLists.txt  README.md  package.xml
config/: GraspPoseDetectionParams.yaml  GraspPoseDetectionParams.yaml~  GraspPoseVisualizerParams.yaml  GraspPoseVisualizerParams.yaml~  GripperMask_1.yaml  GripperMask_1.yaml~
grasp_poses/: stone_1_grasp_poses.gp  stone_2_grasp_poses.gp  stone_3_grasp_poses.gp  stone_4_grasp_poses.gp  stone_5_grasp_poses.gp  stone_6_grasp_poses.gp  stone_6_grasp_poses.txt
include/grasp_pose_detection/: GraspPoseDetection.hpp  grasp_pose_detection_service.hpp  grasp_pose_visualizer.hpp
launch/: grasp_pose_detection.launch  grasp_pose_visualizer.launch
models/: stone_1.pcd  stone_2.pcd  stone_3.pcd  stone_4.pcd  stone_5.pcd  stone_6.pcd
src/: GraspPoseDetection.cpp  grasp_pose_detection_client_node.cpp  grasp_pose_detection_service.cpp  grasp_pose_detection_service_node.cpp  grasp_pose_visualizer.cpp  grasp_pose_visualizer_node.cpp
srv/: DetectGraspPose.srv
